Add experiment name option

--- a/EARL_Colab.ipynb
+++ b/EARL_Colab.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "EARL_Colab.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -95,7 +109,11 @@
         "drive_save_fp = \"Colab Notebooks/Results/\"\n",
         "\n",
         "# Save a log after each run\n",
-        "save_run = True"
+        "save_run = False\n",
+        "\n",
+        "# Set a custom log name\n",
+        "is_custom_log_name = True\n",
+        "custom_log_name = \"colab_cpu\""
       ],
       "execution_count": null,
       "outputs": []
@@ -134,6 +152,9 @@
         "config_dict['experiment']['log_run'] = save_run\n",
         "config_dict['experiment']['log_path'] = os.path.join(log_prefix, drive_save_fp)\n",
         "\n",
+        "if is_custom_log_name:\n",
+        "  config_dict['experiment']['log_name'] = custom_log_name\n",
+        "\n",
         "runner = EvoACRunner(config_dict)"
       ],
       "execution_count": null,
@@ -162,20 +183,5 @@
       "execution_count": null,
       "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "name": "EARL.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
