--- a/colab_main.ipynb
+++ b/colab_main.ipynb
@@ -138,7 +138,7 @@
       "source": [
         "import os\n",
         "import json\n",
-        "from evo_ac.runner import EvoACRunner\n",
+        "from earl.runner import EvoACRunner\n",
         "from google.colab import drive\n",
         "drive.mount('drive')\n",
         "\n",
